--- a/documentation/2.md
+++ b/documentation/2.md
@@ -82,7 +82,7 @@ Nul (`NULL`)
 - Tous les exercices seront à réaliser dans le fichier `2.php`les un à la suite des autres
 
 
-## EXERCICES 1
+## EXERCICE 1
 
 Continuez le code suivant, vous devez affecter la valeur `Garmin` à la variable `$maMontre` et imprimez le résultat à l'écran
 
@@ -93,7 +93,7 @@ $maMontre;
 ```
 
 
-## EXERCICES 2
+## EXERCICE 2
 
 Le but de cet exercice est des permuter les valeurs de la varibale `$a` avec celle de la variable `$b`
 pour qu'au moment du `echo $a;` sa valeur imprime à l'écran 20 et du `echo $b` sa valeur imprime à l'écran 10
