--- a/documentation/3.md
+++ b/documentation/3.md
@@ -71,7 +71,7 @@ echo $nbre1 % $nbre2; // 0
 - Créez un nouveau fichier PHP `3.php` pour effectuer les exercices suivants
 
 
-## EXERCICES 1
+## EXERCICE 1
 
 En utilisant uniquement ces 3 variables et opérateurs arithmétiques, réalisez un calcul qui va vous permettre d'imprimer à l'écran le nombre `1`;
 
@@ -86,7 +86,7 @@ echo [CODE à placer ici]; // 1
 ```
 
 
-## EXERCICES 2
+## EXERCICE 2
 
 Trouvez deux façons de faire vous permettant de récupérer le resultat `27` en utilisant seulement les deux variables suivantes et opérateurs arithmétiques.
 
@@ -103,7 +103,7 @@ echo [CODE à placer ici]; // 27
 ```
 
 
-## EXERCICES 3
+## EXERCICE 3
 
 Créez le code qui va vous permettre d'afficher la table de `disivion` de `7`
 
