--- a/documentation/4.md
+++ b/documentation/4.md
@@ -123,7 +123,7 @@ Bonjour `Monsieur ou Madame` vous êtes `âgés ou jeune`;
 
 ```php
 // 1: Monsieur, 2: Madame
-$civilité = 1;
+$civilite = 1;
 
 // 70: agés  en dessous: jeune
 $age = 30;
