--- a/documentation/5.md
+++ b/documentation/5.md
@@ -2,7 +2,7 @@
 
 ## LA VIDEO RECAP
 
-EN ATTENTE
+[Video](https://www.youtube.com/watch?v=kbTIAUn2dZI)
 
 ## L'instruction Switch
 
@@ -144,3 +144,30 @@ Ensuite récupérez cette valeur grâce à la variable globale `$_GET` (qui est 
 
 
 ```
+
+
+
+## EXERCICE 5
+
+A l'aide d'un paramètre que vous passez dans l'url (`$_GET`) affichez une marque de voiture différente dès que la paramètre change.
+
+
+```php
+$voitures = [
+    'audi',
+    'citroen',
+    'renault'
+];
+
+
+echo …  // Affichez une marque
+
+```
+
+
+
+
+## EXERCICE 6
+
+A l'aide d'un paramètre que vous passez dans l'url (`$_GET`), changez la couleur de fond de la page.
+
